View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023562 | Open CASCADE | OCCT:DRAW | public | 2012-11-20 08:47 | 2013-04-29 15:22 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023562: nbshapes command works incorrect with the attached shapes | ||||
Description | The command nbshapes gives incorrect result on the number of sub-shapes in the attached shapes. | ||||
Steps To Reproduce | 1.restore chl_927_V3.brep b nbshapes b #vertices - 25; edges - 45; faces - 15 explode b v #vertices - 31 explode b e #edges - 51 explode b f #faces - 16 2. restore chl_927_V4.brep b nbshapes b #vertices - 24; edges - 43; faces - 20 explode b v #vertices - 30 explode b e #edges - 49 explode b f #faces - 21 | ||||
Tags | No tags attached. | ||||
Test case number | bugs demo(001) bug23562_1 bug23562_2 bug23562_3 bug23562_4 bug23562_5 bug23562_6 | ||||
2012-11-20 08:47 developer |
chl_927_V3.brep (152,846 bytes) |
2012-11-20 08:48 developer |
chl_927_V4.brep (62,425 bytes) |
|
The difference is that command nbshapes counts number of unique TopoDS_TShape instances while command explode instantiates sub-shapes having the same TopoDS_TShape but different locations as separate objects. Hence, they can report different counts of sub-shapes if the same subshape is used with different locations. For instance, on chl_027_V3.brep, two hexahedral faces (first and last ones as exploded) are actually the same face: Draw[]> restore chl_927_V3.brep a a Draw[]> explode a f a_1 a_2 a_3 a_4 a_5 a_6 a_7 a_8 a_9 a_10 a_11 a_12 a_13 a_14 a_15 a_16 Draw[]> compound a_1 a_16 c Draw[]> nbshapes c Number of shapes in c VERTEX : 6 EDGE : 6 WIRE : 1 FACE : 1 SHELL : 0 SOLID : 0 COMPSOLID : 0 COMPOUND : 1 SHAPE : 15 I suggest this bug should be closed as 'no change required' |
|
Added option '-t' to the command nbshapes. This option allows to see the number of sub-shapes counting the same sub-shapes with different location as different sub-shapes. Please review. |
|
No remarks, please test |
2012-12-21 17:21 tester |
tests.tar (20,480 bytes) |
|
Dear BugMaster, Branch CR23562 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs demo(001) bug23562_1 bug23562_2 bug23562_3 bug23562_4 bug23562_5 bug23562_6 - OK. |
occt: master bfff00a8 2012-12-28 13:55:30
|
0023562: nbshapes command works incorrect with the attached shapes This option allows to see the number of sub-shapes counting the same sub-shapes with different location as different sub-shapes. Adding test cases for this fix |
Affected Issues 0023562 |
|
mod - src/DBRep/DBRep.cxx | Diff File | ||
add - tests/bugs/demo/bug23562_1 | Diff File | ||
add - tests/bugs/demo/bug23562_2 | Diff File | ||
add - tests/bugs/demo/bug23562_3 | Diff File | ||
add - tests/bugs/demo/bug23562_4 | Diff File | ||
add - tests/bugs/demo/bug23562_5 | Diff File | ||
add - tests/bugs/demo/bug23562_6 | Diff File | ||
add - tests/bugs/demo/end | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-11-20 08:47 |
|
New Issue | |
2012-11-20 08:47 |
|
Assigned To | => abv |
2012-11-20 08:47 |
|
File Added: chl_927_V3.brep | |
2012-11-20 08:48 |
|
File Added: chl_927_V4.brep | |
2012-11-20 09:38 |
|
Note Added: 0022300 | |
2012-11-20 09:38 |
|
Assigned To | abv => emv |
2012-11-20 09:38 |
|
Status | new => feedback |
2012-11-22 12:04 |
|
Status | feedback => assigned |
2012-11-22 12:05 |
|
Status | assigned => resolved |
2012-11-22 12:05 |
|
Resolution | open => no change required |
2012-11-22 12:08 |
|
Status | resolved => reviewed |
2012-11-22 12:14 |
|
Assigned To | emv => abv |
2012-11-22 13:50 |
|
Assigned To | abv => bugmaster |
2012-11-22 13:50 |
|
Status | reviewed => tested |
2012-11-22 14:06 |
|
Assigned To | bugmaster => emv |
2012-11-22 14:06 |
|
Status | tested => feedback |
2012-11-30 15:59 |
|
Note Added: 0022487 | |
2012-11-30 15:59 |
|
Status | feedback => assigned |
2012-11-30 15:59 |
|
Assigned To | emv => abv |
2012-11-30 15:59 |
|
Status | assigned => resolved |
2012-11-30 15:59 |
|
Resolution | no change required => open |
2012-12-02 09:21 |
|
Note Added: 0022495 | |
2012-12-02 09:21 |
|
Assigned To | abv => bugmaster |
2012-12-02 09:21 |
|
Status | resolved => reviewed |
2012-12-03 18:56 |
|
Assigned To | bugmaster => mkv |
2012-12-21 17:21 |
|
File Added: tests.tar | |
2012-12-21 17:28 |
|
Note Added: 0022805 | |
2012-12-21 17:29 |
|
Test case number | => bugs demo(001) bug23562_1 bug23562_2 bug23562_3 bug23562_4 bug23562_5 bug23562_6 |
2012-12-21 17:29 |
|
Assigned To | mkv => bugmaster |
2012-12-21 17:29 |
|
Status | reviewed => tested |
2013-01-04 11:35 |
|
Changeset attached | => occt master bfff00a8 |
2013-01-04 11:35 |
|
Assigned To | bugmaster => emv |
2013-01-04 11:35 |
|
Status | tested => verified |
2013-01-04 11:35 |
|
Resolution | open => fixed |
2013-02-20 10:19 | bugmaster | Target Version | => 6.6.0 |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:22 |
|
Fixed in Version | => 6.6.0 |