0023562: nbshapes command works incorrect with the attached shapes This option allows to see the number of sub-shapes counting the same sub-shapes with different location as different sub-shapes. Adding test cases for this fix